Revert "merge with cluster"
This reverts commit 9ecc81eb2a1b95fcff1eed5b4d5d3c37ad6abc50.

--- a/workflow/mv_susie.ipynb
+++ b/workflow/mv_susie.ipynb
@@ -7,8 +7,7 @@
    },
    "source": [
     "# TWAS multivariate susie\n",
-    "\n",
-    "This notebook implements a TWAS analysis workflow using multivariate susie."
+    "Ready to use pipeline that conduct multivariate susie based on the output of univariate susie."
    ]
   },
   {
@@ -17,22 +16,9 @@
     "kernel": "SoS"
    },
    "source": [
-    "## Overview \n",
+    "## Aim\n",
     "\n",
-    "__Objective__: \n",
-    "    To Compute the association between expression and SNP in prepare for TWAS analysis via genotype and multiple molecular phenotype\n",
-    "\n",
-    "__Background__:\n",
-    "    SNP can modulate the functional phenotypes both directly and by modulating the expression levels of genes. \n",
-    "Therefore, the integration of expression measurements and a larger scale GWAS summary association statistics will help identify the genes associated with the targeted complex traits. \n",
-    "\n",
-    "__Significance__:\n",
-    "    By applying this method, new candidate genes whose expression level is significantly associated with complex traits can be used in prediction without actually going through the expensive gene expression measurement process. As a relatively small set of gene expression and genotyping, data can be used to impute the expression for a much larger set of phenotyped individuals from their SNP genotype data. \n",
-    "\n",
-    "__Method__:\n",
-    "    The imputed expression can then be viewed as a linear model of genotypes with _weights based on the correlation between SNPs and gene expression__ in the training data while accounting for linkage disequilibrium (LD) SNPs. We then correlated the imputed gene expression to the trait to perform a transcriptome-wide association study (TWAS) and identify significant expression-trait associations. \n",
-    " \n",
-    "The weights are computed via multivariate susies, the accuracy of such weights are computed via by default 100 times five fold cross validation.\n"
+    "The aim of this workflow is to estimate the association between genotype and variouse molecular phenotypes."
    ]
   },
   {
@@ -57,12 +43,12 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Input and Output(TBD)\n",
+    "# Input and Output\n",
     "## Input\n",
     "\n",
-    "This workflow is design to performed based on the output of the twas_fusion_susie.ipynb pipeline. If other input are used. Please followed the following instructions.\n",
+    "This workflow is design to performed based on the output of the uni_susie.ipynb pipeline. If other input are used. Please followed the following instructions.\n",
     "\n",
-    "- `molecular-pheno`, a plink trio per regions that are the output from the second steps of twas_fusion_susie.ipynb output. For each region, at least two sets of molecular-pheno are needed. For univariate analysis, please refer to the univariate sections of twas_fusion_susie.ipynb. The plink trio shall be named as following `{name_prefix}.{region}`.bed/fam/bim , as shown in the following example.\n",
+    "- `molecular-pheno`, a plink trio per regions that are the output from the second steps of uni_susie.ipynb output. For each region, at least two sets of molecular-pheno are needed. For univariate analysis, please refer to the univariate sections of twas_fusion_susie.ipynb. The plink trio shall be named as following `{name_prefix}.{region}`.bed/fam/bim , as shown in the following example.\n",
     "\n",
     "```\n",
     "geneTpmResidualsAgeGenderAdj_rename.ENSG00000196126.bed  \n",
@@ -285,22 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "kernel": "Bash"
    },
-   "outputs": [
-    {
-     "ename": "ParsingError",
-     "evalue": "File contains parsing errors: \n\t[line  2]: sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\n--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n--region_list region_list  \\\n--wd ./   \\\n--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE &\n\nInvalid statements: SyntaxError('invalid syntax', ('<string>', 1, 5, 'sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\\\\n'))",
-     "execution_count": 2,
-     "output_type": "error",
-     "status": "error",
-     "traceback": [
-      "\u001b[91mFile contains parsing errors: \n\t[line  2]: sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\n--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n--region_list region_list  \\\n--wd ./   \\\n--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE &\n\nInvalid statements: SyntaxError('invalid syntax', ('<string>', 1, 5, 'sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\\\\n'))\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the pipeline with MWE\n",
     "\n",
@@ -321,15 +296,7 @@
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
     "--cv_times 2  \\\n",
     "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'&\n",
-    "\n",
-    "\n",
-    "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
-    "--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n",
-    "--region_list region_list  \\\n",
-    "--wd ./   \\\n",
-    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
-    "--cv_times 2  &"
+    "\n"
    ]
   },
   {
@@ -408,8 +375,6 @@
     "# Prior: list of prior of cov structure, an RDS file that is a list with an element \"U\" containing the cov structurer and an element \"w\" containintg the weights\n",
     "# Preferably the output of wgs_prior_genome pipeline.\n",
     "parameter: mixture_prior = \"NULL\"\n",
-    "parameter: extract_snp = path\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -501,6 +466,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performed MV susie\n",
+    "This step filtered out some of the snvs that are deemed worthless"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -510,6 +483,7 @@
     "parameter: bed_list = path\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output: f'{wd:a}/cache_snp/{name_prefix}.{_regions[0]}.merged.bed'\n",
+    "parameter: extract_snp = path\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'  \n",
     "bash: expand = \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    # create the merged output X\n",
@@ -520,13 +494,6 @@
     "          --allow-no-sex \\\n",
     "          --extract $[extract_snp]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -540,113 +507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "kernel": "SoS"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bash: [mv_susie_2,mv_susie_cv_2]: command not found\n",
-      "bash: input:: command not found\n",
-      "bash: output:: command not found\n",
-      "bash: f{wd:a}/result/{_input[0]:bn}.transformed_XY.RData,: No such file or directory\n",
-      "bash: f{wd:a}/result/{_input[0]:bn}.mv_wgt.txt: No such file or directory\n",
-      "bash: task:: command not found\n",
-      "bash: R:: command not found\n",
-      "bash: syntax error near unexpected token `\"dplyr\"'\n",
-      "bash: syntax error near unexpected token `\"tibble\"'\n",
-      "bash: syntax error near unexpected token `\"readr\"'\n",
-      "bash: syntax error near unexpected token `\"plink2R\"'\n",
-      "bash: syntax error near unexpected token `\"mashr\"'\n",
-      "bash: syntax error near unexpected token `\"mmbr\"'\n",
-      "bash: syntax error near unexpected token `\"flashier\"'\n",
-      "bash: syntax error near unexpected token `\"modelr\"'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `min'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `miss'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `geno'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `unique'\n",
-      "bash: syntax error near unexpected token `else'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `rm_col'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `rm_col'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `rm_col'\n",
-      "bash: syntax error near unexpected token `mean_impute'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `miss'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `{'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `covar'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: tmp: command not found\n",
-      "bash: syntax error near unexpected token `{'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `tmp'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `tmp'\n",
-      "bash: syntax error near unexpected token `{'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: Y_0,: command not found\n",
-      "bash: residual_variance: command not found\n",
-      "bash: syntax error near unexpected token `)'\n",
-      "bash: syntax error near unexpected token `0,ncol'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: m_0: command not found\n",
-      "bash: syntax error near unexpected token `m_$[_regions[0]],file'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `scaled_$[_regions[0]],file'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "[mv_susie_2,mv_susie_cv_2,susie]\n",
     "input: group_by = 3, group_with = 'regions'\n",
@@ -777,8 +642,7 @@
     "    save(scaled_$[_regions[0]],file = \"$[_output[1]]\")\n",
     "    #Output: Weight\n",
     "    m_$[_regions[0]]$coef%>%as.data.frame()%>%write_delim(\"$[_output[2]]\",delim = \"\\t\")\n",
-    "\n",
-    "                 "
+    "\n"
    ]
   },
   {
@@ -1011,13 +875,6 @@
     "                    \n",
     "                    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
