--- a/workflow/mv_susie.ipynb
+++ b/workflow/mv_susie.ipynb
@@ -375,6 +375,9 @@
     "# Prior: list of prior of cov structure, an RDS file that is a list with an element \"U\" containing the cov structurer and an element \"w\" containintg the weights\n",
     "# Preferably the output of wgs_prior_genome pipeline.\n",
     "parameter: mixture_prior = \"NULL\"\n",
+    "# SNPs to be included in the final analysis\n",
+    "parameter: extract_snp = path\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -483,7 +486,6 @@
     "parameter: bed_list = path\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output: f'{wd:a}/cache_snp/{name_prefix}.{_regions[0]}.merged.bed'\n",
-    "parameter: extract_snp = path\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'  \n",
     "bash: expand = \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    # create the merged output X\n",
