--- a/workflow/mixture_prior.ipynb
+++ b/workflow/mixture_prior.ipynb
@@ -495,7 +495,7 @@
     "parameter: remove_label = False\n",
     "input: model_data\n",
     "output: f'{cwd:a}/{_input:bn}{(\"_\" + name.replace(\"$\", \"_\")) if name != \"\" else \"\"}.pdf'\n",
-    "R: expand = \"${ }\"\n",
+    "R: expand = \"${ }\", container = container\n",
     "    plot_sharing = function(X, to_cor=FALSE, title=\"\", remove_names=F) {\n",
     "        clrs <- colorRampPalette(rev(c(\"#D73027\",\"#FC8D59\",\"#FEE090\",\"#FFFFBF\",\n",
     "                                       \"#E0F3F8\",\"#91BFDB\",\"#4575B4\")))(128)\n",
