--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "sos run ~/GIT/neuro-twas/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb \\\n",
+    "sos run /home/hs3163/GIT/neuro-twas/workflow/rosmap_reformatting.ipynb \\\n",
     "    --ref \"/home/hs3163/Project/Rosmap/data/patient_key_WGS.txt\" \\\n",
     "    --name_col 2 \\\n",
     "    --real_name_col 1 \\\n",
@@ -52,7 +52,7 @@
     "    --output \"/home/hs3163/Project/Rosmap/data/gene_exp/DLPFC\" \\\n",
     "    -J 6 -q csg -c ~/system_file/csg.yml\n",
     "\n",
-    "sos run ~/GIT/neuro-twas/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb \\\n",
+    "sos run /home/hs3163/GIT/neuro-twas/workflow/rosmap_reformatting.ipynb \\\n",
     "    --ref \"/home/hs3163/Project/Rosmap/data/patient_key_WGS.txt\" \\\n",
     "    --name_col 2 \\\n",
     "    --real_name_col 1 \\\n",
@@ -61,7 +61,7 @@
     "    --output \"/home/hs3163/Project/Rosmap/data/gene_exp/PCC\" \\\n",
     "    -J 6 -q csg -c ~/system_file/csg.yml\n",
     "\n",
-    "sos run ~/GIT/neuro-twas/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb \\\n",
+    "sos run /home/hs3163/GIT/neuro-twas/workflow/rosmap_reformatting.ipynb \\\n",
     "    --ref \"/home/hs3163/Project/Rosmap/data/patient_key_WGS.txt\" \\\n",
     "    --name_col 2 \\\n",
     "    --real_name_col 1 \\\n",
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
+    "nohup sos run ~/GIT/neuro-twas/workflow/uni_susie.ipynb susie  \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Genome_prior/AC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
@@ -109,7 +109,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
+    "nohup sos run ~/GIT/neuro-twas/workflow/uni_susie.ipynb susie  \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Genome_prior/PCC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
@@ -130,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/uni_susie.ipynb susie  \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Genome_prior/DLPFC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb convert_plink \\\n",
+    "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb merge \\\n",
     "--molecular_pheno /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
     "--analysis-units /home/hs3163/Project/Genome_prior/data/rds_list_test  \\\n",
     "--cwd   /home/hs3163/Project/Genome_prior/mixture_prior/output \\\n",
@@ -271,15 +271,6 @@
    },
    "outputs": [],
    "source": [
-    "for m in /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/; do\n",
-    "    sos run mixture_prior.ipynb ud \\\n",
-    "        --datadir $m --name `basename $m` &> ed_$m.log\n",
-    "    sos run mixture_prior.ipynb ud --ud-method teem \\\n",
-    "        --datadir $m --name `basename $m` &> teem_$m.log\n",
-    "    sos run mixture_prior.ipynb ed \\\n",
-    "        --datadir $m --name `basename $m` &> bovy_$m.log\n",
-    "done\n",
-    "\n",
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud \\\n",
     "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
     "        --datadir /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/ \\\n",
