--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -171,7 +171,7 @@
    "source": [
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb merge \\\n",
     "--molecular_pheno /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
-    "--analysis-units /home/hs3163/Project/Genome_prior/data/rds_list_test  \\\n",
+    "--analysis-units /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
     "--cwd   /home/hs3163/Project/Genome_prior/mixture_prior/output \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
@@ -226,8 +226,8 @@
     "        --datadir /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/ \\\n",
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
-    "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
+    "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ &  \\\n",
+    "        -J 50 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml -s build &\n",
     "        \n",
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb flash_nonneg \\\n",
     "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
@@ -235,7 +235,7 @@
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
-    "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
+    "        -J 50 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb pca \\\n",
     "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
@@ -243,7 +243,7 @@
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
-    "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
+    "        -J 50 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml -s build &\n",
     "        \n",
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb canonical \\\n",
     "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
@@ -251,7 +251,7 @@
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
-    "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n"
+    "        -J 50 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml -s build &\n"
    ]
   },
   {
@@ -271,20 +271,24 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud \\\n",
+    "nohup sos dryrun ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud \\\n",
     "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
     "        --datadir /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/ \\\n",
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
+    "        --scale_only  \"canonical\" &\n",
+    "        \\\n",
     "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ud --ud-method teem  \\\n",
-    "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt \\\n",
+    "        --analysis-units /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/analysis_units.txt  \\\n",
     "        --datadir /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/ \\\n",
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
+    "        --scale_only  \"/home/hs3163/Project/Genome_prior/mixture_prior/output/susie.canonical.rds\" &\n",
+    "        \\\n",
     "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
     "        \n",
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb ed \\\n",
@@ -292,9 +296,24 @@
     "        --datadir /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/ \\\n",
     "        --name 'susie'  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
+    "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ &\n",
+    "        \\\n",
     "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb plot_U \\\n",
+    "        --model_data /home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed.rds \\\n",
+    "        --name \"\"  \\\n",
+    "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
+    "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
    ]
   },
   {
