--- a/workflow/mixture_prior.ipynb
+++ b/workflow/mixture_prior.ipynb
@@ -147,6 +147,10 @@
     "            genos_join_sbhat = full_join(genos_join_sbhat,(genos%>%pull(sbhat))[[j]],by = \"rowname\")%>%select(-rowname)%>%as.matrix\n",
     "        }\n",
     "    }\n",
+    "    name = molecular_pheno%>%mutate(name = map(`#molc_pheno`, ~read.table(text = .x,sep = \"/\")),\n",
+    "                                    name = map_chr(name, ~.x[,ncol(.x)-2]%>%as.character) )%>%pull(name)\n",
+    "    colnames(genos_join_bhat) = name\n",
+    "    colnames(genos_join_sbhat) = name\n",
     "    \n",
     "    # save the rds file\n",
     "    saveRDS(file = \"$[_output]\", list(bhat=genos_join_bhat, sbhat=genos_join_sbhat))"
@@ -495,7 +499,7 @@
     "parameter: remove_label = False\n",
     "input: model_data\n",
     "output: f'{cwd:a}/{_input:bn}{(\"_\" + name.replace(\"$\", \"_\")) if name != \"\" else \"\"}.pdf'\n",
-    "R: expand = \"${ }\", container = container\n",
+    "R: expand = \"${ }\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout',container = container\n",
     "    plot_sharing = function(X, to_cor=FALSE, title=\"\", remove_names=F) {\n",
     "        clrs <- colorRampPalette(rev(c(\"#D73027\",\"#FC8D59\",\"#FEE090\",\"#FFFFBF\",\n",
     "                                       \"#E0F3F8\",\"#91BFDB\",\"#4575B4\")))(128)\n",
